--- a/src/content/technotes/TN0010-response-cache-eviction.mdx
+++ b/src/content/technotes/TN0010-response-cache-eviction.mdx
@@ -1,22 +1,22 @@
 ---
-title: Response Cache Eviction
+title: Response cache eviction
 id: TN0010
 tags: [server, caching, performance]
 ---
 
-_For a runnable example of this cache eviction solution, see the [Response Cache Eviction](https://github.com/apollosolutions/response-cache-eviction) repo._
+> For a runnable example of this cache eviction solution, see the [Response Cache Eviction](https://github.com/apollosolutions/response-cache-eviction) repo.
 
-Apollo Server’s Full Response Cache plugin (`apollo-server-plugin-response-cache`) caches the results of operations for a period of time (time-to-live or TTL). After that time expires, the results are evicted from the cache and the server will execute the operation again.
+Apollo Server’s Full Response Cache plugin (`apollo-server-plugin-response-cache`) caches the results of operations for a period of time (time-to-live or TTL). After that time expires, the results are evicted from the cache, and the server fully resolves the operation the next time a client executes it.
 
-In practice, this usually means setting a short TTL so that results don’t become stale. 
+The most straightforward way to avoid stale data in the response cache is to set a short default TTL. However, this limits the cache's effectiveness for responses that rarely (or never) change.
 
 As of version `3.7.0`, the Full Response Cache plugin (`apollo-server-plugin-response-cache`) allows customizing cache keys to support new cache eviction patterns. This means it’s easier to use longer cache TTLs and increase the hit rate on your cache by evicting the cached responses when relevant events occur.
 
-## Customizing the Cache Key
+## Customizing the cache key
 
 This works by defining a custom response cache key by a pattern that can later be searched on in the cache. What this key should be comprised of and how it should be structured depends on the use-case and what search patterns our cache implementation supports. 
 
-### A Note on Cache Key Uniqueness
+### Ensuring cache key uniqueness
 
 Keep in mind that each key links to a full response object, so if your key is too generic, you risk potentially returning the wrong data for queries. For example, generating a cache key based solely on the operation name would yield the same responses for all operations with the same name, even if the entire query is different. Make sure your keys are unique for each execution of the incoming operations that returns different data. 
 
@@ -36,7 +36,7 @@ generateCacheKey(
 
 The [requestContext](https://github.com/apollographql/apollo-server/blob/main/packages/apollo-server-types/src/index.ts#L135-L175) parameter holds data about the running GraphQL request, such as the request / response objects as well as the [context object](https://www.apollographql.com/docs/apollo-server/data/resolvers/#the-context-argument) that is passed to your resolver functions. Any portion of these data objects can be used as part of your cache key. 
 
-The `keyData` parameter can be used to ensure the uniqueness of your key, simply hashing this variable should be enough to generate a unique key per operation. In fact, the [default implementation](https://github.com/apollographql/apollo-server/blob/76caff6ce797e00907d6ed8e2dab870e255340fe/packages/apollo-server-plugin-response-cache/src/ApolloServerPluginResponseCache.ts#L168-L169) just hashes a `JSON.strigify` version of this parameter as the cache key. 
+The `keyData` parameter can be used to ensure the uniqueness of your key. In most cases, hashing this variable should be enough to generate a unique key per operation. In fact, the [default implementation](https://github.com/apollographql/apollo-server/blob/76caff6ce797e00907d6ed8e2dab870e255340fe/packages/apollo-server-plugin-response-cache/src/ApolloServerPluginResponseCache.ts#L168-L169) hashes a `JSON.stringify` version of this parameter as the cache key. 
 
 In this example, we prefix the default key with the name of the incoming operation:
 
@@ -60,17 +60,17 @@ An example key for the named operation “MyOpName”:
 keyv:fqc:MyOpName:e7eed80930547ed4ab4ece81a18955967831ff4c40757eda9bf1f0de84e042f8
 ```
 
-This approach ensures that all cache keys are unique enough to store unique responses, but gives us a pattern we can leverage to selectively remove cache entries based on our operation names. 
+This approach ensures that all cache keys are unique enough to store unique responses, but gives us a pattern we can use to selectively remove cache entries based on our operation names. 
 
-## Evicting Cache Entries
+## Evicting cache entries
 
 There are two main strategies for evicting response cache entries: manually evicting from a shell prompt, or in response to some event, like a mutation. 
 
 Actually removing entries from the cache once a custom cache key is being used will depend on your caching backend, as each offer different ways to list and remove keys. We’ll explore both options using Redis. 
 
-### A Manual Solution
+### Evicting manually
 
-It may be sufficient for your use-case to only need to evict portions of the cache in one-off scenarios, ie, debugging or testing. In such a scenario, simply having a custom cache key pattern in place and shell access to your Redis instance could be enough. 
+If you need to evict cache entries for local testing or debugging, it might suffice to define a custom cache key pattern and delete entries as needed with `redis-cli`.
 
 Here’s an example of removing all keys in a Redis instance that match a given pattern:
 
@@ -78,7 +78,7 @@ Here’s an example of removing all keys in a Redis instance that match a given 
 redis-cli --raw KEYS "$PATTERN" | xargs redis-cli del
 ```
 
-This command will list out every key matching any glob-style "$PATTERN" and remove them one by one. 
+This command lists every key matching any glob-style "$PATTERN" and removes them one by one. 
 
 Here’s an example using the operation name prefix pattern described above to remove all entries with unnamed operations:
 
@@ -86,15 +86,15 @@ Here’s an example using the operation name prefix pattern described above to r
 redis-cli --raw KEYS "keyv:fqc:unnamed*" | xargs redis-cli del
 ```
 
-[The Redis docs for the KEYS command](https://redis.io/commands/keys/) recommend NOT using the `KEYS` function in production application code and only execute against production with “extreme care”. Redis specifically recommends using `SCAN` instead for this type of thing, which is described in the Event Based Solution section.
+[The Redis docs for the KEYS command](https://redis.io/commands/keys/) recommend NOT using the `KEYS` function in production application code and only executing against production with "extreme care". Redis specifically recommends instead using `SCAN`, which is described in [Event-based eviction](#event-based-eviction).
 
-The utility of this approach will depend on the number of records stored in your cache and how performant the pattern search is. It will also depend on the number of records that need to be removed. If your searches are scanning and/or returning millions of records, this approach probably should be avoided in a production environment. 
+The utility of this approach will depend on the number of records stored in your cache and how performant the pattern search is, as well as the number of records that need to be removed. If your searches are scanning and/or returning millions of records, this approach probably should be avoided in a production environment. 
 
-### An Event Based Solution
+### Event-based eviction
 
-Most other use-cases need to evict cache entries in response to certain events. The [Response Cache Eviction](https://github.com/apollosolutions/response-cache-eviction) repo, mentioned above, has a full walk-through of evicting certain operation responses from the cache when a specific mutation is executed.
+Most other use cases need to evict cache entries in response to certain events. The [Response Cache Eviction](https://github.com/apollosolutions/response-cache-eviction) repo provides a full walkthrough of evicting certain operation responses from the cache when a specific mutation is executed.
 
-Redis clients offers no way to batch delete entries based on a pattern (that we’ve found at least). Our event based solution needs to do a similar algorithm: Look up keys by a pattern, then remove those keys. 
+Redis clients currently offer no way to batch delete entries based on a pattern. As a result, our event based solution needs to do a similar algorithm: look up keys by a pattern, then remove those keys. 
 
 The following snippet is from [the repo mentioned above](https://github.com/apollosolutions/response-cache-eviction): 
 
@@ -124,12 +124,11 @@ const deleteByPrefix = async (prefix: string) => {
 }
 ```
 
-This solution uses the `scanIterator` function (which uses the `SCAN` Redis function) to scan through cache entries in a memory efficient way, as opposed to the `KEYS` method mentioned above. The `SCAN` method is more appropriate to use in a production environment. 
+This solution uses the `scanIterator` function (which uses the `SCAN` Redis function) to scan through cache entries in a memory-efficient way, as opposed to the `KEYS` method mentioned above. The `SCAN` method is more appropriate to use in a production environment. 
 
 The `deleteByPrefix` method can be added to your context object and then executed in your mutation resolvers to remove certain operations from the cache. 
 
-Again a full working example of this is available in the [Response Cache Eviction](https://github.com/apollosolutions/response-cache-eviction) repo.
 
-## Final Thoughts
+## Final thoughts
 
-Either of the eviction solutions mentioned above should be used with caution. Make sure you have an understanding of the sorts of effects that your set up will have on your cache. Its a good idea to monitor your caching server when testing our your different use-cases to ensure that you aren’t overloading your cache.
+Either of the eviction solutions mentioned above should be used with caution. Make sure you have an understanding of the sorts of effects that your setup will have on your cache. Its a good idea to monitor your caching server when testing your different use cases to ensure that you aren’t overloading your cache.
