Apply suggestions from code review
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/studio/explorer/additional-features.mdx
+++ b/src/content/studio/explorer/additional-features.mdx
@@ -218,7 +218,7 @@ query StarWarsGenderStats {
 
 ### Is the Explorer available for on-prem distribution?
 
-Yes! Through the use of [Embeded Explorer](/studio/explorer/embed-explorer) you can now include Explorer on any site you might have internally.
+The Explorer is not currently available for download or on-prem hosting. However, you can embed the Apollo-hosted Explorer on your own internal websites. For details, see [Embedding the Explorer](/studio/explorer/embed-explorer).
 
 ### Do my Explorer operations pass through Apollo servers?
 
