Add clarification on usage reporting requirements

--- a/src/content/studio/metrics/field-usage.mdx
+++ b/src/content/studio/metrics/field-usage.mdx
@@ -186,7 +186,7 @@ Your GraphQL server can report metrics for field executions, referencing operati
 
 ### Prerequisites
 
-> ⚠️ Before continuing, make sure you've configured your GraphQL server to [push metrics to Apollo Studio](./usage-reporting/) .
+> ⚠️ Before continuing, make sure you've configured your Apollo Gateway or individual GraphQL server to [push metrics to Apollo Studio](./usage-reporting/) .
 
 To report each type of field usage metric to Apollo, make sure your graph meets the prerequisites for that metric:
 
