--- a/src/content/studio/metrics/operation-signatures.mdx
+++ b/src/content/studio/metrics/operation-signatures.mdx
@@ -49,7 +49,7 @@ Helpfully, Apollo Server's [signature algorithm](#signature-algorithm) generates
 
 > ⚠️ **This algorithm might change in future versions of Apollo Server.** This article describes the signature algorithm as of Apollo Server 3.6.1. It is provided here for informational purposes, not as a canonical specification.
 
-Feel free to [jump to an example](#example-signature).
+Feel free to [jump to an example](#example-signature) or [view the source](https://github.com/apollographql/apollo-utils/blob/main/packages/usageReporting/src/signature.ts).
 
 Apollo Server's current signature algorithm performs the following modifications on an operation to generate its signature:
 
@@ -140,7 +140,7 @@ query GetUser {
 
 The signature algorithm's primary purpose is to group together operations that differ only cosmetically (in terms of whitespace, field order, aliases, and so on). As an additional effect, the algorithm does [remove most in-line argument values](#1-transform-in-line-argument-values), which in theory helps maintain data privacy.
 
-**However, you should not rely on this!** Ideally, your sensitive data should never reach Apollo Studio in the first place. Whenever possible, [use GraphQL variables](https://www.apollographql.com/docs/react/data/operation-best-practices/#use-graphql-variables-to-provide-arguments) instead of in-line values for arguments. This helps you control exactly which values are reported to Apollo. For details, see [Apollo Studio data privacy and compliance](https://www.apollographql.com/docs/studio/data-privacy/).
+**However, you should not rely on this!** Ideally, your sensitive data should never reach Apollo Studio in the first place. Whenever possible, [use GraphQL variables](/react/data/operation-best-practices/#use-graphql-variables-to-provide-arguments) instead of in-line values for arguments. This helps you control exactly which values are reported to Apollo. For details, see [Apollo Studio data privacy and compliance](../data-privacy/).
 
 
 ## Logging signatures at runtime
