--- a/src/content/studio/metrics/field-usage.mdx
+++ b/src/content/studio/metrics/field-usage.mdx
@@ -19,11 +19,11 @@ The table displays some combination of the following metrics for each field, dep
 | Metric                 | Description                                                                                                                          |
 | ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------ |
 | Field executions       | How many times your servers have executed the resolver for the field over a given time period.                                       |
-| Referencing operations | How many operations sent by clients over a given time period have included the field, according to metrics provided by your servers. |
+| Requested by operations | How many operations sent by clients over a given time period have included the field, according to metrics provided by your servers. |
 
 For each of these columns to appear on the Fields page, your GraphQL servers must [report the associated metrics to Apollo Studio](#reporting-field-usage). If some but not _all_ of your GraphQL servers report this data, the Fields page presents an incomplete picture of your graph's field usage.
 
-## Field executions vs. referencing operations
+## Field executions vs. requesting operations
 
 Let's look at the example metrics for the `BuildError` type again:
 
@@ -34,7 +34,7 @@ Let's look at the example metrics for the `BuildError` type again:
   width="700"
 />
 
-As you can see, the daily **field executions** and **referencing operations** for a single field can differ significantly! There are many possible reasons for this, described below.
+As you can see, the daily **field executions** and **requesting operations** for a single field can differ significantly! There are many possible reasons for this, described below.
 
 ### Objects in lists
 
@@ -48,7 +48,7 @@ query GetBooks {
 }
 ```
 
-If `Query.books` returns a list of ten `Book` objects, then `Book.title` is resolved _ten times_. This query therefore contributes _ten_ **field executions** and just _one_ **referencing operation** to `Book.title`.
+If `Query.books` returns a list of ten `Book` objects, then `Book.title` is resolved _ten times_. This query therefore contributes _ten_ **field executions** and just _one_ **requesting operation** to `Book.title`.
 
 ### Multiple references to a field
 
@@ -68,7 +68,7 @@ query GetTwoBooks {
 
 This operation includes two references to the fields `Query.book` and `Book.title`. Therefore, the resolvers for these fields each execute twice (assuming `Query.book` doesn't return `null`). However, these multiple references are all part of a _single_ operation.
 
-Therefore, this query contributes two **field executions** and just _one_ **referencing operation** to each of `Query.book` and `Book.title`.
+Therefore, this query contributes two **field executions** and just _one_ **requesting operation** to each of `Query.book` and `Book.title`.
 
 ### Fields that return interfaces
 
@@ -101,9 +101,9 @@ query GetFavoriteMedia {
 
 If `Query.favoriteMedia` returns a `Book` object here, then `Book.title` is resolved one time. _However_, the original query _does not reference_ `Book.title`. Instead, it references **`Media.title`**, because `Query.favoriteMedia` has a return type of `Media`.
 
-Therefore, this query contributes one **field execution** and zero **referencing operations** to `Book.title`. It also contributes one **referencing operation** to `Media.title`. Note that interface fields always have zero **field executions**.
+Therefore, this query contributes one **field execution** and zero **requesting operations** to `Book.title`. It also contributes one **requesting operation** to `Media.title`. Note that interface fields always have zero **field executions**.
 
-### Referenced fields that aren't resolved
+### Requested fields that aren't resolved
 
 Let's say a client executes the following query one time:
 
@@ -115,9 +115,9 @@ query GetLoggedInUser {
 }
 ```
 
-Now, let's say `Query.loggedInUser` returns `null` because no user is logged in. In this case, the resolver for `User.name` never executes, because its parent retuns `null`. Therefore, this query contributes _zero_ **field executions** and _one_ **referencing operation** to `User.name`.
+Now, let's say `Query.loggedInUser` returns `null` because no user is logged in. In this case, the resolver for `User.name` never executes, because its parent retuns `null`. Therefore, this query contributes _zero_ **field executions** and _one_ **requesting operation** to `User.name`.
 
-A referenced field might not be resolved for any of these reasons:
+A requested field might not be resolved for any of these reasons:
 
 - The field is nested under a field that returns `null`, as shown above.
 - The field is nested under a field that returns a list, but the list is empty.
@@ -178,11 +178,11 @@ This query's execution starts in the Reviews subgraph, but it needs to obtain ea
 
 To help resolve these references, the Reviews subgraph _must_ return each `Product`'s `id` field, even though that field isn't included in the original query. This is because `id` is a `@key` field for `Product`.
 
-Therefore, this query contributes one **field execution** and zero **referencing operations** to `Product.id`. Similar logic applies to fields that use the [`@requires` directive](https://www.apollographql.com/docs/federation/entities/#extending-an-entity-with-computed-fields-advanced).
+Therefore, this query contributes one **field execution** and zero **requesting operations** to `Product.id`. Similar logic applies to fields that use the [`@requires` directive](https://www.apollographql.com/docs/federation/entities/#extending-an-entity-with-computed-fields-advanced).
 
 ## Reporting field usage
 
-Your GraphQL server can report metrics for field executions, referencing operations, or both.
+Your GraphQL server can report metrics for field executions, requesting operations, or both.
 
 ### Prerequisites
 
@@ -190,9 +190,9 @@ Your GraphQL server can report metrics for field executions, referencing operati
 
 To report each type of field usage metric to Apollo, make sure your graph meets the prerequisites for that metric:
 
-#### Referencing operations
+#### Requesting operations
 
-To report metrics for referencing operations, your GraphQL server must run Apollo Server 3.6 or later.
+To report metrics for requesting operations, your GraphQL server must run Apollo Server 3.6 or later.
 
 If you have a [federated graph](https://apollographql.com/docs/federation), your _gateway_ must run Apollo Server 3.6 or later, but there are no requirements for your subgraphs.
 
@@ -218,7 +218,7 @@ Disabling field-level instrumentation for a particular request has the following
 - The request does not contribute to field-level execution timing hints that can be displayed in the Explorer and in VS Code.
 - The request does not produce a trace that can be viewed in the Traces section of the Operations page in Studio.
 
-These requests _do_ still contribute to most features of Studio, such as schema checks, the Operations page, and the "referencing operations" statistic on the Fields page.
+These requests _do_ still contribute to most features of Studio, such as schema checks, the Operations page, and the "requesting operations" statistic on the Fields page.
 
 To disable field-level instrumentation for _all_ requests, pass `() => false` as the `fieldLevelInstrumentation` option:
 
