--- a/src/content/studio/metrics/field-usage.mdx
+++ b/src/content/studio/metrics/field-usage.mdx
@@ -19,7 +19,7 @@ The table displays some combination of the following metrics for each field, dep
 | Metric                 | Description                                                                                                                          |
 | ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------ |
 | Field executions       | How many times your servers have executed the resolver for the field over a given time period.                                       |
-| Requesting operations | How many operations sent by clients over a given time period have included the field, according to metrics provided by your servers. |
+| Requested by operations | How many operations sent by clients over a given time period have included the field, according to metrics provided by your servers. |
 
 For each of these columns to appear on the Fields page, your GraphQL servers must [report the associated metrics to Apollo Studio](#reporting-field-usage). If some but not _all_ of your GraphQL servers report this data, the Fields page presents an incomplete picture of your graph's field usage.
 
