Tweak Contracts top of page disclaimer

--- a/src/content/studio/contracts.mdx
+++ b/src/content/studio/contracts.mdx
@@ -3,7 +3,7 @@ title: Contracts
 description: Deliver subsets of your enterprise graph
 ---
 
-> Contracts are available only for [Enterprise plans](https://www.apollographql.com/pricing/). Currently, they only support [federated supergraphs](/federation/).
+> Contracts are available only for [Enterprise plans](https://www.apollographql.com/pricing/). Currently, they only support [federated variants](/federation/) of Studio graphs.
 
 Apollo Studio **contracts** enable you to deliver different subsets of your graph to different consumers. Each contract filters specific portions of your graph's [API schema](https://www.apollographql.com/docs/federation/#federated-schemas) into a different Studio variant:
 
