--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -66,7 +66,7 @@ For more information, see the [landing page plugin API reference](/apollo-server
 
 > For descriptions of options shown in the dialog (along with advanced options that _aren't_ shown), [see below](#options).
 
-### Embedding with a default operation
+### Setting a default operation
 
 You can prepopulate your embedded Explorer with an operation from one of your existing Explorer tabs. If you do, the embedded Explorer includes all of the following automatically on load:
 
