--- a/src/content/studio/metrics/field-usage.mdx
+++ b/src/content/studio/metrics/field-usage.mdx
@@ -5,7 +5,7 @@ description: Understand which fields your clients use
 
 > For details on setting up field metrics reporting to Apollo Studio, see [Reporting field usage](#reporting-field-usage).
 
-In Apollo Studio, your graph's **Fields** page can display a table of basic usage metrics for each field in your schema. For example, here are metrics for the fields of a `BuildError` type:
+In Apollo Studio, your graph's **Fields** page can display a table of basic usage metrics for each field in your schema:
 
 <img
   src="../img/fields-page.jpg"
@@ -14,7 +14,7 @@ In Apollo Studio, your graph's **Fields** page can display a table of basic usag
   width="700"
 />
 
-You can click any field in the table to open its **Field Insights** page. This page displays in-depth details about which clients and operations contribute to the field's usage, along with performance metrics:
+You can click the name of any field in the table to open its **Field Insights** page. This page displays in-depth details about which clients and operations contribute to the field's usage, along with performance metrics:
 
 <img
   src="../img/field-insights.jpg"
@@ -33,7 +33,7 @@ The table on the Fields page displays some combination of the following metrics 
 
 For each of these columns to appear on the Fields page, your GraphQL servers must [report the associated metrics to Apollo Studio](#reporting-field-usage). If some but not _all_ of your GraphQL servers report this data, the Fields page presents an incomplete picture of your graph's field usage.
 
-Let's look at the example metrics for the `BuildError` type again:
+Let's look at these two metrics for fields of an example type:
 
 <img
   src="../img/fields-page.jpg"
