--- a/src/content/technotes/TN0006-unmanaged-federation.mdx
+++ b/src/content/technotes/TN0006-unmanaged-federation.mdx
@@ -174,9 +174,9 @@ The most straightforward option for updating your supergraph schema is to restar
 
 **This method is _not_ recommended,** because the restart can potentially cause downtime for your supergraph. The methods described above can update your supergraph schema _without_ requiring redeployment.
 
-## Local Development with `IntrospectAndCompose`
+## Local development with `IntrospectAndCompose`
 
-If you are using `@apollo/gateway` locally and have access to query subgraphs ([not through public internet](https://www.apollographql.com/docs/enterprise-guide/graph-security/#only-allow-the-gateway-to-query-subgraphs-directly)), you can use [IntrospectAndCompose](https://www.apollographql.com/docs/federation/api/apollo-gateway/#class-introspectandcompose).
+If you're using `@apollo/gateway` locally and are able to query your subgraphs ([_not_ through the public internet](/enterprise-guide/graph-security/#only-allow-the-gateway-to-query-subgraphs-directly)), you can use [`IntrospectAndCompose`](/federation/api/apollo-gateway/#class-introspectandcompose).
 
 ```javascript
 const gateway = new ApolloGateway({
@@ -189,4 +189,4 @@ const gateway = new ApolloGateway({
 });
 ```
 
-This will use the [`_service` field](https://www.apollographql.com/docs/federation/federation-spec#query_service) to fetch the schema information directly from a running subgraph instead of fetching from Studio. If you are using [Managed Federation](https://www.apollographql.com/docs/federation/managed-federation/overview/) then this field is not needed.
+This uses the [`_service` field](/federation/federation-spec#query_service) to fetch the schema information directly from a running subgraph instead of fetching from Studio. If you're using [managed federation](/federation/managed-federation/overview/), this field is not needed.
